finished for the day 17/01

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header class="header">
         <img class="logo" src="resources/images/shield.svg" alt="Company logo of a shield and the company letters CFS">
         <p class="coName">Crestwood Financial Services</p>
-        <nav><a class="contact" href="#">Get In Touch</a></nav>
+        
+        <nav><a class="contact" href="#">Get In Touch</a><div class="light"></div></nav>
     </header>
 
 
