financial practices explanations completed

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main class="main-container">
         <div class="divider1" role="presentation">
             <section class="jointRules financialPractices1">
-                <p class="p p1">Long-Term Care Planning</p>
-                <p class="p p2">Estate Planning</p>
-                <p class="p p3">Charitable Planning</p>
-                <p class="p p4">College Planning</p>
-                <p class="p p5">Tax Planning</p>
-                <p class="p p6">Business Succession Planning</p>
+                <p class="p p1">Long-Term Care Planning done</p>
+                <p class="p p2">Estate Planning done</p>
+                <p class="p p3">Charitable Planning done</p>
+                <p class="p p4">College Planning done</p>
+                <p class="p p5">Tax Planning done</p>
+                <p class="p p6">Business Succession Planning done</p>
             </section>
             <section>
                 <p class="explain1"></p>
@@ -48,8 +48,8 @@
                 <p class="p p11">Cash Flow Analysis</p>
                 <p class="p p12">Risk Management and Insurance</p>
             </section>
-            <section class="explain2">
-
+            <section>
+                <p class="explain2"></p>
             </section>
         </div>
     </main>
