end of day 18/01/2024

--- a/index.html
+++ b/index.html
@@ -12,26 +12,32 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="header">
         <img class="logo" src="resources/images/shield.svg" alt="Company logo of a shield and the company letters CFS">
         <p class="coName">Crestwood Financial Services</p>
-        
-        <nav><a class="contact" href="#">Get In Touch</a><div class="light"></div></nav>
+
+        <nav><a class="contact" href="#">Get In Touch</a></nav>
     </header>
-
-
-    <main class="main-container">
+    <!-- Main Body -->
+    <div class="main-container" role="presentation">
         <div class="divider1" role="presentation">
             <section class="jointRules financialPractices1">
-                <p class="p p1">Long-Term Care Planning done</p>
-                <p class="p p2">Estate Planning done</p>
-                <p class="p p3">Charitable Planning done</p>
-                <p class="p p4">College Planning done</p>
-                <p class="p p5">Tax Planning done</p>
-                <p class="p p6">Business Succession Planning done</p>
+                <ul>
+                    <li class="p p1">Long-Term Care Planning</li>
+                    <li class="p p2">Estate Planning</li>
+                    <li class="p p3">Charitable Planning</li>
+                    <li class="p p4">College Planning</li>
+                    <li class="p p5">Tax Planning</li>
+                    <li class="p p6">Business Succession Planning</li>
+
+                </ul>
+
             </section>
-            <section>
-                <p class="explain1"></p>
+            <section class="bottomLeft">
+                <img class="companyOwner" src="resources/images/smiling-888532_640.jpg" alt="An image of the company owner">
+    <div class="companyOwnerTxt">Hi I'm Harry how can I help you today?</div>
+                <p hidden class="explain1"></p>
             </section>
         </div>
         <div class="divider2" role="presentation">
@@ -41,22 +47,25 @@
         </div>
         <div class="divider3" role="presentation">
             <section class="jointRules financialPractices2">
-                <p class="p p7">Pensions Advice</p>
-                <p class="p p8">Retirement Planning</p>
-                <p class="p p9">Investment Management</p>
-                <p class="p p10">Debt Management</p>
-                <p class="p p11">Cash Flow Analysis</p>
-                <p class="p p12">Risk Management and Insurance</p>
+                
+                <ul>
+                    <li class="p p7">Pensions Advice</li>
+                    <li class="p p8">Retirement Planning</li>
+                    <li class="p p9">Investment Management</li>
+                    <li class="p p10">Debt Management</li>
+                    <li class="p p11">Cash Flow Analysis</li>
+                    <li class="p p12">Risk Management and Insurance</li>
+                </ul>
             </section>
             <section>
                 <p class="explain2"></p>
             </section>
         </div>
-    </main>
-    <footer>
-        <p class="createdBy">Created by Steve Davis 17/01/2024</p>
-    </footer>
-
+        <!-- Footer -->
+        <footer>
+            <p class="createdBy">Created by Steve Davis 17/01/2024</p>
+        </footer>
+    </div>
 
 
 
